--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   geolocator: ^9.0.2
   location: ^4.4.0
   easy_localization: ^3.0.1
+  bonsoir: ^2.0.0
+
+
 
 #  flutter_staggered_grid_view: ^0.6.2
 
