--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,7 @@ dependencies:
   location: ^4.4.0
   easy_localization: ^3.0.1
   bonsoir: ^2.0.0
-
+  flutter_nearby_connections: ^1.1.1
 
 
 #  flutter_staggered_grid_view: ^0.6.2
